test/files/pos/implicit-my-package-object-two-files/A.scala
package a

package object b {
  implicit def foo: String = ""
}
