test/files/neg/warn-shadowing-import-213/A.scala
package a

object O { def a = 0 }